# soviet_jews

./: .gitignore  README.md  index.html  main.py  pyproject.toml  server.py
.github/workflows/: deploy.yml
data/: census_stat_areas.csv  census_stat_areas.xlsx
statistical_areas_2022/: statistical_areas.geojson  top_areas.json
